# rust-ages-prs

./: .editorconfig  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: compress.rs  decompress.rs  flavor.rs  lib.rs  test.rs  test.txt  variant.rs
